# videoforge

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: SETUP.md
examples/: narrated_explainer.yaml  simple_slideshow.yaml  youtube_intro.yaml
remotion/: package-lock.json  package.json  tsconfig.json
remotion/src/: Root.tsx  types.ts
remotion/src/components/: SceneRenderer.tsx  TextOverlay.tsx
remotion/src/compositions/: VideoForgeComposition.tsx
remotion/src/templates/: Presentation.tsx  TextExplainer.tsx  TikTokShort.tsx  YouTubeIntro.tsx
skills/: video-create.md  video-template.md
src/videoforge/: __init__.py  cli.py  config.py  schema.py  spec.py
src/videoforge/assets/: __init__.py  image_gen.py  music_gen.py  resolver.py  tts.py  video_gen.py
src/videoforge/export/: __init__.py  platforms.py
src/videoforge/render/: __init__.py  compositor.py  engine.py  ffmpeg.py  remotion.py  transitions.py
src/videoforge/templates/: photo_montage.yaml  presentation.yaml  text_explainer.yaml  tiktok_short.yaml  youtube_intro.yaml  youtube_outro.yaml
tests/: test_assets.py  test_render.py  test_spec.py
